[tool.poetry]
name = "makeathon"
version = "0.1.0"
description = "Hacking our way to greatness."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
FeatureCloud = "^0.0.30"
bottle = "^0.12.25"
neo4j = "^5.20.0"
torchmetrics = "^1.3.2"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
torch = "^2.3.0"


[tool.poetry.group.dev.dependencies]
networkx-neo4j = "^0.0.2"
torchvision = "^0.18.0"
pillow = "^10.3.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
